// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FraudFormPage should match the snapshot on desktop layout 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <title>
      Signaler une usurpation
    </title>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-8w"
    id="page-container"
  >
    <h1
      class="title fr-h3 fr-mb-2w fr-text--bold"
    >
      Signalez une usurpation d’identité
    </h1>
  </div>
</div>
`;

exports[`FraudFormPage should match the snapshot on mobile layout 1`] = `
<div>
  <div
    data-mockid="Helmet"
  >
    <title>
      Signaler une usurpation
    </title>
  </div>
  <div
    class="fr-m-auto fr-px-2w fr-mt-5w"
    id="page-container"
  >
    <h1
      class="title fr-h3 fr-mb-2w fr-text--bold"
    >
      Signalez une usurpation d’identité
    </h1>
  </div>
</div>
`;
